# QmlNotes

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  resources.qrc
src/qml/: Note.qml  Notes.qml  NotesModel.qml  NotesToolBar.qml  main.qml
